@@ -1,13 +1,11 @@
 package com.example.entity;
 
-import com.example.game.GameManager;
 import com.example.utils.Point;
 import javafx.scene.canvas.GraphicsContext;
 import javafx.scene.image.Image;
 import javafx.scene.image.WritableImage;
 
 import java.util.List;
-import java.util.Collections;
 
 public class AnimatedEntity extends Entity {
     private final Image[] frames;
@@ -17,6 +15,12 @@ public class AnimatedEntity extends Entity {
 
     // path + movement
     private final List<Point> path;
+    /**
+     * Movement speed in pixels per second. The value itself remains constant
+     * for an entity but the actual distance covered each frame is scaled by the
+     * {@code dt} provided from {@link com.example.game.GameManager} which
+     * already applies any global game speed multiplier.
+     */
     private final double speed;
     private int waypointIndex = 0;  // Start at first waypoint
 
@@ -30,7 +34,7 @@ public class AnimatedEntity extends Entity {
                           double scaleFactor)
     {
         // Start at the first path point
-        super(path.get(0).x(), path.get(0).y(), hp);
+        super(path.getFirst().x(), path.getFirst().y(), hp);
         this.path = path;
         this.speed = speed;
         this.frameDuration = frameDuration;
@@ -58,20 +62,54 @@ public class AnimatedEntity extends Entity {
 
         // 2) movement
         if (waypointIndex < path.size()) {
-            Point target = path.get(waypointIndex);
-            double dx = target.x() - x, dy = target.y() - y;
-            double dist = Math.hypot(dx, dy);
-            if (dist < 1) {
-                x = target.x();
-                y = target.y();
-                waypointIndex++;
-            } else {
-                // speed is in px/sec, dt already incorporates game‐speed
-                double moveDistance = speed * dt;
-                if (moveDistance > dist) moveDistance = dist;
-                x += dx / dist * moveDistance;
-                y += dy / dist * moveDistance;
+            double remaining = speed * dt;
+
+            while (remaining > 0 && waypointIndex < path.size()) {
+                Point target = path.get(waypointIndex);
+                double dx = target.x() - x, dy = target.y() - y;
+                double dist = Math.hypot(dx, dy);
+
+                if (dist < 1e-3) {
+                    // Snap to the waypoint and advance to the next
+                    x = target.x();
+                    y = target.y();
+                    waypointIndex++;
+                    continue;
+                }
+
+                if (remaining >= dist) {
+                    // Consume the entire segment and keep going with leftover distance
+                    x = target.x();
+                    y = target.y();
+                    remaining -= dist;
+                    waypointIndex++;
+                } else {
+                    // Move partially along the segment and finish the update
+                    x += dx / dist * remaining;
+                    y += dy / dist * remaining;
+                    remaining = 0;
+                }
             }
+        }
+    }
+
+    /**
+     * Returns true if this entity has traversed its entire path and reached the final
+     * goal tile.
+     */
+    public boolean hasReachedGoal() {
+        return waypointIndex >= path.size();
+    }
+
+
+    public Point getFuturePosition()
+    {
+        int futureSteps = ( int ) (0.75 * speed);
+        if ( waypointIndex + futureSteps < path.size() ) {
+            return path.get(waypointIndex + futureSteps);
+        }
+        else {
+            return path.getLast();
         }
     }
 
